﻿shmuel 20.10.2014 21:01:14 +0200 - build 435

1. M#2840: mload/msave: работать с локальным профилем.

w17 09.10.2014 02:53:15 +0200 - build 434

1. LuaFAR: build recovered after plugin.hpp changes

shmuel 02.10.2014 21:47:41 +0200 - build 433

1. Продолжение 328.2.

shmuel 21.09.2014 12:16:52 +0200 - build 432

1. Продолжение 431: mf.msave сохраняет связи между таблицами и их метатаблицами.

shmuel 20.09.2014 19:34:52 +0200 - build 431

1. Переделка сериализации данных, в результате чего функция mf.msave дополнительно поддерживает:
   (1) ключи-таблицы
   (2) таблицы с рекурсивными вложениями

shmuel 07.09.2014 19:22:01 +0200 - build 430

1. Небольшая оптимизация 429.2.

shmuel 06.09.2014 13:36:28 +0200 - build 429

1. Уточнение 428.

2. M#2793: MenuItem: нужна возможность задать разный текст для пунктов в разных меню.

shmuel 06.09.2014 00:51:16 +0200 - build 428

1. M#2792: MenuItem: заменить wtype на area.
   Подробности - в мануале (статья "Добавление пунктов в меню плагинов").

shmuel 03.09.2014 23:52:40 +0200 - build 427

1. Продолжение 425.

shmuel 03.09.2014 16:13:53 +0200 - build 426

1. Продолжение 425.

shmuel 03.09.2014 01:25:51 +0200 - build 425

1. M#2705: Far.GetConfig (на замену Far.Cfg_Get).

shmuel 01.09.2014 23:48:28 +0200 - build 424

1. M#2724: LuaFAR: MIF_SELECTED для far.Menu.

shmuel 28.08.2014 21:36:52 +0200 - build 423

1. 'MacroPath' в luamacro.ini должно быть внутри секции [General].

shmuel 27.08.2014 21:22:51 +0200 - build 422

1. LuaFAR: продолжение 419.2.

shmuel 27.08.2014 00:29:48 +0200 - build 421

1. Уточнение 420.

shmuel 26.08.2014 23:15:21 +0200 - build 420

1. macro:load поддерживает явное указание путей, с которых будут грузиться макрофайлы.

shmuel 26.08.2014 21:16:27 +0200 - build 419

1. MCTL_LOADALL поддерживает явное указание путей, с которых будут грузиться макрофайлы.

2. LuaFAR: far.MacroLoadAll поддерживает явное указание путей, с которых будут грузиться макрофайлы.

shmuel 25.08.2014 20:23:55 +0200 - build 418
