@@ -1,4 +1,8 @@
-﻿shmuel 20.10.2014 21:01:14 +0200 - build 435
+﻿shmuel 22.10.2014 10:28:20 +0200 - build 436
+
+1. Исправлен баг в функции mf.msave.
+
+shmuel 20.10.2014 21:01:14 +0200 - build 435
 
 1. M#2840: mload/msave: работать с локальным профилем.
 
